--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="java.js"></script>
+    <script type="text/javascript" src="game.js"></script>
+    <!-- <script type="text/javascript" src="java.js"></script> -->
     <script src="https://kit.fontawesome.com/c3b8725dbb.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -13,8 +14,9 @@
 		<section id="jeu">
     </section>
     <script>
-			newGame();
-		</script>
+      jeu = document.getElementById("jeu");
+      newGame();
+    </script>
 
     <section id="clavier">
       <table>
