--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/c3b8725dbb.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="dictionnaire.js"></script>
+		<script type="text/javascript" src="game.js"></script>
 
     <link rel="stylesheet" href="style.css">
   </head>
