--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="game.js"></script>
 
     <link rel="stylesheet" href="style.css">
+    <title>WORDLE</title>
   </head>
   <body>
     <!-- HEADER -->
