--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/c3b8725dbb.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="dictionnaire.js"></script>
-		<script type="text/javascript" src="game.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>WORDLE</title>
   </head>
   <body>
@@ -14,12 +12,12 @@
       <h1 id="title">WORDLE</h1>
     </header>
 
-    <!-- GAME DIV -->
-		<section id="game">
+    <!-- BOARD -->
+		<section id="wordle-board">
     </section>
 
     <!-- KEYBOARD -->
-    <section id="keyboard">
+    <section id="wordle-keyboard">
       <table>
         <tbody>
           <td>A</td>
@@ -68,12 +66,11 @@
     </footer>
 
   <!-- POPUP -->
-  <section id="popup">
+  <section id="wordle-popup">
     <div>
       <h1 id="message"></h1>
       <h2 id="mot">
-        Le mot était : 
-        <b></b>
+        - Appuyez pour recommencer -
       </h2>
       <div id="restart">
         <i class="fa-sharp fa-solid fa-rotate-right"></i>
@@ -82,8 +79,6 @@
   </section>
 
     <!-- GAME LAUNCHER -->
-    <script>
-      play("game", "keyboard", "popup");
-    </script>
+    <script type="module" src="./js/wordle.js"></script>
   </body>
 </html>
