--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
 
     <link rel="stylesheet" href="/style.css">
     <title>WORDLE</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
+    <link rel="manifest" href="/meta/site.webmanifest">
   </head>
   <body>
     <!-- HEADER -->
